Fixes #2978 - Text area & progress bar on mobile

--- a/webcompat/static/css/src/issue-wizard.css
+++ b/webcompat/static/css/src/issue-wizard.css
@@ -10,6 +10,7 @@
 @import "../src/variables.css";
 @import "../src/issue-wizard-popup.css";
 @import "../src/issue-wizard-slider.css";
+@import "../src/issue-wizard-textarea.css";
 
 :root {
   --between-steps-margin: 53px;
@@ -617,65 +618,8 @@
   width: 100%;
 }
 
-.problem-description textarea {
-  border: none;
-  flex: 1;
-  font-weight: 200;
-  height: 100px;
-  margin-bottom: 30px;
-  padding: 10px;
-  resize: none;
-  width: 100%;
-}
-
 .problem-description .text-field:focus {
   border: none;
-}
-
-.problem-description .progress {
-  background: #b3f4d7;
-  border-radius: 2px;
-  bottom: 0;
-  content: "";
-  height: 20px;
-  left: 0;
-  margin: 4px;
-  overflow: hidden;
-  position: absolute;
-  width: calc(100% - 8px);
-  z-index: 2;
-}
-
-.problem-description .progress .bar {
-  background: #22b573;
-  bottom: 0;
-  content: "";
-  height: 20px;
-  left: 0;
-  min-width: 1%;
-  position: absolute;
-  transition: width .3s ease-out;
-  width: 1%;
-  z-index: 1;
-}
-
-.problem-description .progress .tick {
-  left: calc(50% - 6px);
-  opacity: 0;
-  position: absolute;
-  top: 3px;
-  width: 12px;
-  z-index: 2;
-}
-
-.problem-description .progress.complete .tick {
-  animation-duration: .25s;
-  animation-fill-mode: forwards;
-  animation-name: validated;
-}
-
-.char-limit {
-  font-size: 12px;
 }
 
 .description-text {
